--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -166,6 +166,7 @@
     "email": "E-mail",
     "Password": "Senha",
     "Created at": "Data de Criação",
-    "Updated at": "Última Atualização"
+    "Updated at": "Última Atualização",
+    "Category": "Categoria"
 
 }
