fix: update message page

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -171,7 +171,9 @@
     "Phone": "Telefone",
     "Type": "Tipo",
     "Message": "Mensagem",
-    "Address": "Endereço"
+    "Address": "Endereço",
+    "State": "Estado",
+    "No Read ": "Lida"
 
 
 }
